lang.java.statics.test/tests/positive/classes/nested/deeplynestedqualifiedthis.yes.javtest
STATIX ok
JAVAC  ok

[p] {

    [A]
    package p;
    public class A {
        public class B {
            public class C {
                public class D {
                    public void m() {
                        B a = B.this;
                    }
                }
            }
        }
    }

}
